--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,6 +380,84 @@
         Also found the grave jars and fragments of Chinese ceramics relics of Srivijaya kingdom 10th century. Jars grave is also the cultural heritage of prehistoric Buddhists in the 10th century. In the area also found fragments of ceramics that is based on chronological originated from China in the 10th century.
     </string>
 
+    <string name="deskripsi_bukitbatu">
+        Bukit Batu (stone hill) or Batu Gajah (elephant stone) is cultural site which become a historical tourist destination in OKI. The tourist destination located in Bukit Batu village, Pangkalan Lampam district, offers amazing historical tourism of the urban legend of “Serunting Sakti or Si Pahit Lidah” (The Bitter Tongue). According to South Sumatra people, Si Pahit Lidah always leave memories that later became a site or proving that he ever existed in this region. ‘Till today, this site is still exist and beautiful looks like a stone mortar, bride stone and elephant stone. This site also often visited by both domestic and foreign tourists. The local people maintain and preserve these sites.
+    </string>
+
+    <string name="deskripsi_maspari_island">
+        Maspari island is the outer island of South Sumatra province with about 25 hectares area which directly adjacent to Bangka province. This island has clear white sand beach and surrounded by rocks and hawksbill habitat. Maspari island located in Tulung Selapan district, Ogan Komering Ilir (OKI).
+        \n
+        \n
+        The island used as turtle conservative and shrimp breeding center. The eastern island of South Sumatra has natural beauty with big rocks, white sand and clear sea water. Maspari is the beautiful island.
+        \n
+        \n
+        To reach this island is easy. The visitors will take about 70km away in less than three hours from Tulung Selapan district, OKI. Then, after overland trip, continue with fast boat ride with less than 15 minutes from Selapan dock. If taken from Palembang, the visitors can reach it in two ways. The first alternative is through Musi river, precisely throughgh Benteng Kuto Besak or dock near Musi bridge, by speed boat with outboard motors through Musi river to Upang and sea line of Bangka strait to the east of South Sumatra direct to Maspari island in less than 6 hours.
+        \n
+        \n
+        The next alternative is through Lumpur river overland road from Palembang city to Tulung Selapan district, about 2 hours drive. Then continue from Tulung Selapan district to Maspari island by speed boat with about less than 4 hours trip.
+
+        There is flora and fauna live in Maspari island. In some locations there where turtles lay their eggs. There are hundreds of eggs are ready to hatch that has known as Tukik, kind of hawksbill which very protected because it is quite rare on this earth. It is said that from 1,000 eggs, it’s only 1 egg who survive to adulthood. The rest are die before reach adulthood. On the top of Maspari island hill, there is beacon to guide ships that pass across Bangka strait.
+    </string>
+
+    <string name="deskripsi_kayuagung">
+        Kayuagung is a downtown in South Sumatra province. This is the capital downtown of Ogan Komering Ilir regency. Kayuagung consist of 10 village (Morge Siwe):
+        \n
+        1. Mangujaya \n
+        2. Cintaraja \n
+        3. Jua-jua \n
+        4. Sidakerja \n
+        5. Sukadana \n
+        6. Paku \n
+        7. Kedaton \n
+        8. Kotaraya \n
+        9. Kayuagung Asli \n
+        10. Perigi \n
+        \n
+        The origine name of Kayuagung downtown is due in the middle of this downtown, there is a big tree, but now on, the tree has gone. Visiting Ogan Komering Ilir will started by visit this Kayuagung downtown.
+    </string>
+
+    <string name="deskripsi_tembulun_waterfall">
+        Tembulun Waterfall is located in Tanjung Kurung, Semidang Aji Sub-district, Ogan Kemering Ulu regency.
+        \n
+        \n
+        Tembulun Fall has a height of about 30 m with a pool that located underneath the fall, that fairly deep and wide, around 4x10x15 m.
+    </string>
+
+    <string name="deskripsi_kambas_waterfall">
+        Kambas Waterfall is located in Ulak Lebar village, Ulu Ogan sub-district, Batu Raja, Ogan Komering Ulu. This fall has 425 metres high above sea level and 50 metres high that surrounded by hills and forest with giant rocks.
+        \n
+        \n
+        To reach this waterfall is can be done by walking and it takes 30 minutes from Ulak Lebar village. During the journey to the waterfall, we can enjoy another water fall with 30M high, which is Pungai Waterfall that located around 500 m from Kambas.
+    </string>
+
+    <string name="deskripsi_martapura_town">
+        Martapura located about 250 km from the capital city of South Sumatra Province, can be accessed by train, then by cars travel for about 5 hours. From Palembang to Martapura pass several cities of South Sumatra such as; Indralaya, Prabumulih, and Baturaja. Martapura also has its advantages as Martapura city in South Kalimantan, beside its tourist destinations that always makes people want to always visit Martapura, it also interesting when the fruit season arrives. Martapura typical fruit is Durian and Duku fruit. Several hundred acres of durian and duku gardens are here. Durian Komering and duku Komering is famous fruits in the market. Somehow when you hear kind of durian and duku komering fruit, the buyer will be booming. Komering itself is one of the largest tribes located in Martapura. Durian Komering season usually during in December to March while duku Komering March to May.
+        \n
+        \n
+        To support the extensive rice cultivation in Martapura, Indonesian government in 1991 has build Irrigation Upper Komering Perjaya Dam, which serves to irrigate 200 ha of rice fields. Besides, the dam also serves as natural tourist destination in order to generate the region income and as  entertainment destination for OKU Timur citizens. The dam has strategic location, beautiful scenery with beautiful panoramic of the sprawling rice fields and rubber plantations so it gives cool and natural air impression.
+        \n
+        \n
+        Beside Perjaya Dam, Martapura also has Limas house (Palembang traditional house), which has stood from 1937. This was the residence of pasirah Busnan Mansour and until now it still care well by the extended family descended of pasirah which known as Limas family. Then about 12 km from Martapura downtown, precisely in Jayapura district there is Mencar springs. Shifted about 10 km, there are Villa Masin tourism which is located in Mendah village. Here, the visitors will find a large jar that is often referred as Gurin. This jar is located near streams. There is some water in the jar that never dries and sometimes salty.
+    </string>
+
+    <string name="deskripsi_komering_river">
+        Komering River is one of nine major rivers in South Sumatra province. This river is upper course in Lake Ranau and lower course into Musi River in Palembang. Komering River is very historic because it has built a civilization in South Sumatra. In addition, this river has high diversity of biological resources.
+        \n
+        \n
+        In Komering River live various types of fish, such as; hindik, haruan, catfish, lampam, kopor, saluang, balida, tauman, kapiak, also hurang and others. Perhaps, since centuries ago the fish can live breed from upstream to downstream Komering river, or they can have a natural life cycle continuously. Ogan Komering Ulu Timur community is famous for its fish dishes from Komering river including roasted, salted, and or curry by akas ombai, and Ompu-ompu or the descendants along Komering river..
+        \n
+        \n
+    </string>
+
+    <string name="deskripsi_datuk_lake">
+        Datuk Lake located about 40 km from the Capital regency, Martapura. Located in Surabaya village and Mendayun village, Madang Suku I district. This potential tourism object Datuk Lake which is untouched yet by the development is actually quite potential for to develop. The lake has named Datuk because it was managed by progenitor from Rasuan village, Madang Suku I district and his tomb is in a small island in the center lake of Datuk island. The lake has four small islands: Gagulan Island, Datuk Island, Tanjung Simpur Island and Honik Island.
+        \n
+        \n
+        The lake’s water sources is coming from Gilas water that empties into Komering river, Mendayun village, Suku Madang I district of OKU Timur regency. The lake is also has buffalo breeding which owned by villagers of Surabaya village, Madang Suku I district, and the most typical of this lake is the presence of many white lake birds (goose). Datuk lake  is 10m2 width and rich in freshwater fish and there are still some wild crocodiles here.
+        \n
+        \n
+    </string>
+
     <string name="facebook_app_id">1691040570962158</string>
     <string name="fb_login_protocol_scheme">fb1691040570962158</string>
 
