Fitur Button Floating Boom

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -458,6 +458,19 @@
         \n
     </string>
 
+    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
+    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
+    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>
+
+    <string-array name="string_array_boom_menu">
+        <item>Hotel</item>
+        <item>Airport</item>
+        <item>Event</item>
+        <item>Favourite</item>
+        <item>Restaurant</item>
+        <item>Transportation</item>
+    </string-array>
+
     <string name="facebook_app_id">1691040570962158</string>
     <string name="fb_login_protocol_scheme">fb1691040570962158</string>
 
